--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,4 +1,4 @@
-<% provide(:title, 'Home') %>
+<% provide(:title, 'About Us') %>
 <h1>Basu Blog</h1>
     <p>
       This is the <%= yield(:title) %> page for the <a href="http://basublog.herokuapp.com">Basu Blog</a>.
