--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,4 +1,10 @@
-<h1>Basu Blog</h1>
-    <p>
-      This is the <%= yield(:title) %> page for the <a href="http://basublog.herokuapp.com">Basu Blog</a>.
-    </p>
+<div class="center hero-unit">
+  <h1>Welcome to the Basu Blog</h1>
+  <h2>
+  	This is the <%= yield(:title) %> page for the <a href="http://basublog.herokuapp.com">Basu Blog</a>.
+  </h2>
+
+  <%= link_to "Sign up now!", signup_path, class: "btn btn-large btn-primary" %>
+</div>
+
+<%= link_to image_tag("rails.png", alt: "Rails"), 'http://rubyonrails.org/' %>
