--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -5,6 +5,7 @@
       <nav>
         <ul class="nav pull-right">
           <li><%= link_to "Home",    '#' %></li>
+          <li><%= link_to "Images",    images_path %></li>
           <li><%= link_to "Help",    '#' %></li>
           <li><%= link_to "Sign in", '#' %></li>
         </ul>
