--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -7,4 +7,4 @@
   <%= link_to "Sign up now!", signup_path, class: "btn btn-large btn-primary" %>
 </div>
 
-<%= link_to image_tag("rails.png", alt: "Rails"), 'http://rubyonrails.org/' %>
+<%= link_to image_tag("http://scontent-b.cdninstagram.com/hphotos-xpf1/t51.2885-15/10413158_597456177019852_1607585551_n.jpg", alt: "Rails"), 'http://rubyonrails.org/' %>
